[UI] Fix an overflow issue in the footer

--- a/app/javascript/src/styles/common/_footer.scss
+++ b/app/javascript/src/styles/common/_footer.scss
@@ -66,6 +66,7 @@ footer.footer-wrapper {
   @include window-larger-than(450px) {
     .footer-grid {
       grid-template-areas: "logo left right";
+      padding: 1rem 0;
     }
 
     .footer-logo {
